[DOC] Swagger Docs for API Method Get Asset Maintenance and Asset Finding Module
