# docs/swagger.yaml
@@ -27,6 +27,113 @@ definitions:
       updated_at:
         type: string
     type: object
+  entity.AssetFinding:
+    properties:
+      asset_placement_id:
+        description: FK - Asset Placement
+        type: string
+      asset_placements:
+        $ref: '#/definitions/entity.AssetPlacement'
+      created_at:
+        type: string
+      finding_by_technician:
+        description: FK - Technician
+        type: string
+      finding_by_user:
+        description: FK - User / Guest
+        type: string
+      finding_category:
+        type: string
+      finding_image:
+        type: string
+      finding_notes:
+        type: string
+      id:
+        type: string
+      technicians:
+        $ref: '#/definitions/entity.Technician'
+      users:
+        $ref: '#/definitions/entity.User'
+    type: object
+  entity.AssetMaintenance:
+    properties:
+      asset_placement_id:
+        description: FK - Asset Placement
+        type: string
+      created_at:
+        type: string
+      created_by:
+        description: FK - Admin
+        type: string
+      id:
+        type: string
+      maintenance_by:
+        description: FK - Technician
+        type: string
+      maintenance_day:
+        type: string
+      maintenance_hour_end:
+        type: string
+      maintenance_hour_start:
+        type: string
+      maintenance_notes:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  entity.AssetMaintenanceSchedule:
+    properties:
+      asset_category:
+        type: string
+      asset_name:
+        description: FK - Asset
+        type: string
+      asset_qty:
+        description: FK - Asset Placement
+        type: integer
+      email:
+        type: string
+      maintenance_day:
+        type: string
+      maintenance_hour_end:
+        type: string
+      maintenance_hour_start:
+        type: string
+      maintenance_notes:
+        type: string
+      telegram_is_valid:
+        type: boolean
+      telegram_user_id:
+        type: string
+      username:
+        description: FK - Technician
+        type: string
+    type: object
+  entity.AssetPlacement:
+    properties:
+      asset_desc:
+        type: string
+      asset_id:
+        description: FK - Asset
+        type: string
+      asset_owner:
+        description: FK - Technician
+        type: string
+      asset_qty:
+        type: integer
+      created_at:
+        type: string
+      created_by:
+        description: FK - Admin
+        type: string
+      id:
+        type: string
+      room_id:
+        description: FK - Room
+        type: string
+      updated_at:
+        type: string
+    type: object
   entity.Metadata:
     properties:
       limit:
@@ -49,6 +156,49 @@ definitions:
         type: string
       metadata:
         $ref: '#/definitions/entity.Metadata'
+      status:
+        example: success
+        type: string
+    type: object
+  entity.ResponseGetAllAssetFinding:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entity.AssetFinding'
+        type: array
+      message:
+        example: asset finding fetched
+        type: string
+      metadata:
+        $ref: '#/definitions/entity.Metadata'
+      status:
+        example: success
+        type: string
+    type: object
+  entity.ResponseGetAllAssetMaintenance:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entity.AssetMaintenance'
+        type: array
+      message:
+        example: asset maintenance fetched
+        type: string
+      metadata:
+        $ref: '#/definitions/entity.Metadata'
+      status:
+        example: success
+        type: string
+    type: object
+  entity.ResponseGetAllAssetMaintenanceSchedule:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entity.AssetMaintenanceSchedule'
+        type: array
+      message:
+        example: asset maintenance schedule fetched
+        type: string
       status:
         example: success
         type: string
@@ -76,6 +226,19 @@ definitions:
         type: array
       message:
         example: deleted asset fetched
+        type: string
+      status:
+        example: success
+        type: string
+    type: object
+  entity.ResponseGetFindingHourTotal:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entity.StatsContextTotal'
+        type: array
+      message:
+        example: asset finding fetched
         type: string
       status:
         example: success
@@ -176,6 +339,43 @@ definitions:
       total:
         type: integer
     type: object
+  entity.Technician:
+    properties:
+      created_at:
+        type: string
+      created_by:
+        description: FK - User
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      telegram_is_valid:
+        type: boolean
+      telegram_user_id:
+        type: string
+      username:
+        type: string
+    type: object
+  entity.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      telegram_is_valid:
+        type: boolean
+      telegram_user_id:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -221,14 +421,98 @@ paths:
       summary: Get Deleted Asset
       tags:
       - Asset
+  /api/v1/asset/finding:
+    get:
+      consumes:
+      - application/json
+      description: Returns a paginated list of assets finding
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.ResponseGetAllAssetFinding'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get All Asset Finding
+      tags:
+      - Asset
+  /api/v1/asset/finding/hour_total:
+    get:
+      consumes:
+      - application/json
+      description: Returns a paginated list of assets finding total per hour
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.ResponseGetFindingHourTotal'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get All Asset Finding Hour Total
+      tags:
+      - Asset
+  /api/v1/asset/maintenance:
+    get:
+      consumes:
+      - application/json
+      description: Returns a paginated list of assets maintenance
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.ResponseGetAllAssetMaintenance'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get All Asset Maintenance
+      tags:
+      - Asset
+  /api/v1/asset/maintenance/schedule:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of assets maintenance schedule
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entity.ResponseGetAllAssetMaintenanceSchedule'
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get All Asset Maintenance Schedule
+      tags:
+      - Asset
   /api/v1/asset/most_context/{targe_col}:
     get:
       consumes:
       - application/json
-      description: Returns a list of most appear item in asset by given field
+      description: Returns a list of most appear item in asset maintenance by given
+        field
       parameters:
-      - description: 'Target Column to Analyze (such as: asset_merk, asset_category,
-          or asset_status)'
+      - description: 'Target Column to Analyze (such as: maintenance_day)'
         in: path
         name: target_col
         required: true
@@ -246,7 +530,7 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Get Most Context Asset
+      summary: Get Most Context Asset Maintenance
       tags:
       - Asset
   /api/v1/room:
@@ -364,5 +648,5 @@ paths:
             type: object
       summary: Get Most Context Room
       tags:
-      - Asset
+      - Room
 swagger: "2.0"
